Fix statistics to handle more than 2G points